--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-spreadsheet": "^0.9.5",
+    "sharp": "^0.33.5",
     "stripe": "^17.2.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
